frontend/test/should_fail/index_exec_edge_fromIndexSame_argument_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<AEdge>, j:double)
{
	{ i=edgesFromIndexSame(bari, j) }
}
